<resources>
    <string name="app_name">MouseHunter</string>
    <string name="signUp">회원가입</string>
    <string name="button">시작</string>
    <string name="id">ID</string>
    <string name="pass">PASS</string>
    <string name="name">이름</string>
    <string name="email">EMAIL</string>
    <string name="cancel">취소</string>
    <string name="submit">확인</string>
    <string name="check">중복</string>
    <string name="signIn">로그인</string>
    <string name="title_activity_map">Map</string>
    <string name="url">http://iotmit.iptime.org:83/Tom/PointList.po</string>
</resources>
